feat: mejorar la accesibilidad y el diseño del componente Hero, actualizar el NavBar con un fondo difuminado y añadir un enlace a la sección Ongoing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -34,3 +34,11 @@ html {
 .spacing-section {
   @apply px-7 sm:px-20 py-10 sm:py-20;
 }
+
+::-webkit-scrollbar {
+  width: 0;
+}
+
+.title-section {
+  @apply text-4xl font-bold mb-10;
+}
